--- a/src/components/code/code-c/pages/elem-cabout.html
+++ b/src/components/code/code-c/pages/elem-cabout.html
@@ -54,7 +54,7 @@
   <p><a href="https://teach-in.ru/">https://teach-in.ru/</a> Открытые видеолекции учебных курсов МГУ</p>
   <p><a href="https://code-basics.com/ru/languages/clang">https://code-basics.com/ru/languages/clang</a> Курс Си 8 уроков. Прошел 2024.11.14 чт</p>
   <hr>
-  <p><a href="https://gb.ru/courses/197">https://gb.ru/courses/197</a> Основы языка C. Закладываем фундамент Ваших знаний</p>
+  <p><a href="https://gb.ru/courses/197">https://gb.ru/courses/197</a> Основы языка C 14 уроков. Закладываем фундамент Ваших знаний. Прошел 2024.09.26 пн</p>
   <hr>
   <p><a href="https://ru.hexlet.io/courses/introduction-to-c">https://ru.hexlet.io/courses/introduction-to-c</a> Введение в Си</p>
   <hr>
